--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -25,6 +25,24 @@
                 {% endblock %}
             </div>
             <div class="col-sm-10 ">{% block content %}{% endblock %}</div>
+            <!-- The code first checks if pagination is enabled on the current page. If so then it adds next and previous links as appropriate (and the current page number).  -->
+            {% block pagination %}
+            {% if is_paginated %}
+            <div class="pagination">
+                <span class="page-links">
+                    {% if page_obj.has_previous %}
+                    <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">previous</a>
+                    {% endif %}
+                    <span class="page-current">
+                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                    </span>
+                    {% if page_obj.has_next %}
+                    <a href="{{ request.path }}?page={{ page_obj.next_page_number }}">next</a>
+                    {% endif %}
+                </span>
+            </div>
+            {% endif %}
+            {% endblock %}
         </div>
     </div>
 </body>
