--- a/catalog/templates/catalog/author_detail.html
+++ b/catalog/templates/catalog/author_detail.html
@@ -3,24 +3,16 @@
 {% block content %}
 <h1>Title: {{ author.last_name }}</h1>
 
-<p><strong>First Name:</strong> {{ author.first_name }}</a></p> <!-- author detail link not yet defined -->
-<p><strong>Last Name:</strong> {{ author.last_name }}</p>
-<p><strong>DoB:</strong> {{ author.date_of_birth }}</p>
-<p><strong>DoD:</strong> {{ author.date_of_death }}</p>
+<p><strong>Author:</strong> {{ author }}</a></p> <!-- author detail link not yet defined -->
+<p>{{author.date_of_birth}} - {% if author.date_of_death %}{{author.date_of_death}}{% endif %}</p>
 
 <div style="margin-left:20px;margin-top:20px">
-    <!-- <h4>Copies</h4> -->
-
-    <!-- below code not working -->
-    {% for book in book.list %}
-    <hr>
-    {% if True %}
-    <li>
-        <a href="{{ book.get_absolute_url }}">{{ book.title }}</a> ({{book.author}})
-    </li>
-    {% else %}
-    <p>There is currently no book by this author.</p>
-    {% endif %}
-    {% endfor %}
+    <h4>Books</h4>
+    <dl>
+        {% for book in author.book_set.all %}
+        <dt><a href="{% url 'book-detail' book.pk %}">{{book}}</a> ({{book.bookinstance_set.all.count}})</dt>
+        <dd>{{book.summary}}</dd>
+        {% endfor %}
+    </dl>
 </div>
 {% endblock %}
