--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -24,6 +24,7 @@
                 </ul>
                 {% if user.is_authenticated %}
                 <li>User: {{ user.get_username }}</li>
+                <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
                 <!-- 
                     Note also how we have appended ?next={{request.path}} to the end of the URLs. 
                     What this does is add a URL parameter next containing the address (URL) 
@@ -31,9 +32,9 @@
                     successfully logged in/out, the views will use this "next" value to redirect 
                     the user back to the page where they first clicked the login/logout link
                  -->
-                <li><a href="{ url 'logout' %}?next={{ request.path }}">Logout</a></li>
+                <li><a href="{% url 'logout' %}?next={{ request.path }}">Logout</a></li>
                 {% else %}
-                <li><a href="{ url 'login' %}?next={{ request.path }}">Login</a></li>
+                <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
                 {% endif %}
                 {% endblock %}
             </div>
